--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     padding: 0;
   }
   header { background-color: #dee; margin-bottom: 5px; padding: 5px; }
-  .wi { font-size: 3em; margin-top: 10px; margin-bottom: 10px;}
   span[class^='weather-'] { display: block; font-size: .95em; }
   .weather-table { border-collapse: collapse; margin: auto; width: 95%; }
   .weather-table td { padding: .25em; text-align: center; }
+  .weather-table .wi { font-size: 3em; margin-top: 20px; margin-bottom: 10px;}
   /*.weather-time { background-color: #eee; padding: 2px; }*/
   .debug-bar { 
     background: #e5e5e5; 
@@ -26,9 +26,8 @@
     width: 100%; 
   }
 
-  .debug-bar div[class^='debug-'] {
-    display: inline-block;
-  }
+  .debug-bar div[class^='debug-'] { display: inline-block; }
+  .settings-button { cursor: pointer; float: right; }
   </style>
 </head>
 <body>
@@ -42,6 +41,9 @@
   <footer class="debug-bar">
     <div class="debug-status"></div>
     <div class="debug-latlong"></div>
+    <button class="settings-button">
+      <i class="wi wi-alien" title="Settings"></i>
+    </button>
   </footer>
 
   <script src="main.js"></script>
