add menu button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   }
 
   .debug-bar div[class^='debug-'] { display: inline-block; }
-  .settings-button { cursor: pointer; float: right; }
+  .menu-button { cursor: pointer; float: right; }
   </style>
 </head>
 <body>
@@ -41,8 +41,8 @@
   <footer class="debug-bar">
     <div class="debug-status"></div>
     <div class="debug-latlong"></div>
-    <button class="settings-button">
-      <i class="wi wi-alien" title="Settings"></i>
+    <button class="menu-button">
+      <i class="wi wi-alien" title="Menu"></i>
     </button>
   </footer>
 
