add Fahrenheit / Celsius toggles

--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
     overflow: hidden;
     padding: 0;
   }
-  header { background-color: #dee; margin-bottom: 5px; padding: 5px; }
+  header { 
+    background-color: #ffc74f; 
+    /*box-shadow: 0 0 2px 3px #eeb63e;*/
+    margin-bottom: 5px; 
+    padding: 5px; 
+  }
   span[class^='weather-'] { display: block; font-size: .95em; }
   .weather-table { border-collapse: collapse; margin: auto; width: 95%; }
   .weather-table td { padding: .25em; text-align: center; }
   .weather-table .wi { font-size: 3em; margin-top: 20px; margin-bottom: 10px;}
-  /*.weather-time { background-color: #eee; padding: 2px; }*/
   .debug-bar { 
     background: #e5e5e5; 
     bottom: 0; 
-    color: #b2b2b2;
+    color: #a1a1a1;
     font-size: 14px;
     min-height: 20px; 
     padding: 2px 5px;
