--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     overflow: hidden;
     padding: 0;
   }
-  header { 
+  header:not(:empty) { 
     background-color: #ffc74f; 
-    /*box-shadow: 0 0 2px 3px #eeb63e;*/
     margin-bottom: 5px; 
     padding: 5px; 
   }
+  header:empty { margin-bottom: 20px; }
   span[class^='weather-'] { display: block; font-size: .95em; }
   .weather-table { border-collapse: collapse; margin: auto; width: 95%; }
   .weather-table td { padding: .25em; text-align: center; }
-  .weather-table .wi { font-size: 3em; margin-top: 20px; margin-bottom: 10px;}
+  .weather-table .wi { font-size: 3em; margin-top: 8px; margin-bottom: 8px;}
   .debug-bar { 
     background: #e5e5e5;
     bottom: 0; 
@@ -33,6 +33,7 @@
   .debug-bar div[class^='debug-'] { display: inline-block; }
   .menu-button { cursor: pointer; float: right; }
   .api-key-input-box {
+    display: none;
     margin: auto;
     width: 90%;
   }
@@ -59,9 +60,7 @@
   </style>
 </head>
 <body>
-  <header>
-    ^_^ the weather!
-  </header>
+  <header></header>
   <div class="api-key-input-box">
     <p class="api-key-text">This is some text about how you need to put
     in an API key! It'll look nice and fancy and have a 
