add hello text + homepage menu option

--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
 <body>
   <header></header>
   <div class="api-key-input-box">
-    <p class="api-key-text">This is some text about how you need to put
-    in an API key! It'll look nice and fancy and have a 
-    <a href="https://developer.forecast.io/">link to the Forecast API 
-    registration page</a></p>
+    <p class="api-key-text">
+    Hi! <strong>Mostly Sunny</strong> uses <a href="https://forecast.io">Forecast.io</a>
+    as its data-source, but you'll have to apply for a developer API key to use it. You'll
+    be fine with their free plan (1,000 look-ups/day &mdash; I use about 100 a day). Visit
+    their <a href="https://developer.forecast.io/">developer page</a> to get your key and
+    paste (<code>Command+v</code>) it in the box below!</p>
 
     <p class="api-key">
       <input class="api-key-input" 
